# music-frog

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  AGENTS.md  ANDROID.md  CHANGELOG.md  Cargo.toml  FIX_SUMMARY.md  GEMINI.md  ISSUE_RESOLVED.md  README.md  TESTING.md  TODO.md  USAGE_SPEC.md  package.json  pnpm-lock.yaml  review.md  rust-toolchain.toml
.cargo/: config.toml
.codebuddy/agents/: core-module-tester.md
.github/workflows/: release-msi.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
config-manager-ui/: index.html  main.js  package-lock.json  package.json  postcss.config.js  style.css  tailwind.config.js  vite.config.mjs
config-manager-ui/src/: App.vue  api.ts  main.ts  styles.css  types.ts
config-manager-ui/src/components/: BusyOverlay.vue  CorePanel.vue  EditorPanel.vue  EditorSettingsPanel.vue  ImportLocalPanel.vue  ImportSubscriptionPanel.vue  ProfilesPanel.vue  StatusHeader.vue
config-manager-ui/src/locales/: en-US.json  zh-CN.json
crates/despicable-infiltrator-core/: Cargo.toml
crates/despicable-infiltrator-core/src/: admin_api.rs  config.rs  editor.rs  lib.rs  profiles.rs  proxy.rs  runtime.rs  scheduler.rs  servers.rs  settings.rs  subscription.rs  version.rs
crates/despicable-infiltrator-core/src/admin_api/: handlers.rs  mod.rs  models.rs  state.rs
crates/despicable-infiltrator-core/src/scheduler/: mod.rs  subscription.rs  sync.rs
crates/infiltrator-admin/: Cargo.toml
crates/infiltrator-admin/src/: admin_api.rs  lib.rs  scheduler.rs  servers.rs
crates/infiltrator-admin/src/admin_api/: admin_api_test.rs  handlers.rs  handlers_test.rs  models.rs  state.rs
crates/infiltrator-admin/src/scheduler/: mod.rs  subscription.rs  subscription_test.rs  sync.rs
crates/infiltrator-android/: Cargo.toml  build.rs  uniffi.toml
crates/infiltrator-android/src/: api.rs  ffi.rs  infiltrator_android.udl  jni_bridge.rs  lib.rs  runtime.rs  tls.rs  uniffi_api.rs
crates/infiltrator-core/: Cargo.toml
crates/infiltrator-core/src/: app_routing.rs  config.rs  dns.rs  fake_ip.rs  lib.rs  profiles.rs  rules.rs  servers.rs  settings.rs  subscription.rs  tun.rs
crates/infiltrator-core/src/admin_api/: events.rs  handlers.rs  mod.rs  models.rs  state.rs
crates/infiltrator-core/src/scheduler/: mod.rs  subscription.rs  sync.rs
crates/infiltrator-desktop/: Cargo.toml
crates/infiltrator-desktop/src/: editor.rs  lib.rs  proxy.rs  runtime.rs  service.rs  version.rs
crates/infiltrator-http/: Cargo.toml
crates/infiltrator-http/src/: lib.rs
crates/mihomo-api/: Cargo.toml
crates/mihomo-api/src/: client.rs  error_test.rs  lib.rs  proxy_test.rs  types.rs  types_test.rs
crates/mihomo-api/src/connection/: manager.rs  manager_test.rs
crates/mihomo-api/src/proxy/: manager.rs  test.rs
crates/mihomo-config/: Cargo.toml
crates/mihomo-config/src/: lib.rs  manager.rs  manager_test.rs  profile.rs  yaml.rs
crates/mihomo-dav-sync/cli/: Cargo.toml
crates/mihomo-dav-sync/dav-client/: Cargo.toml
crates/mihomo-dav-sync/dav-client/src/: client.rs  lib.rs  xml_parser.rs
crates/mihomo-dav-sync/indexer/: Cargo.toml
crates/mihomo-dav-sync/platform-android/: Cargo.toml
crates/mihomo-dav-sync/state-store/: Cargo.toml
crates/mihomo-dav-sync/sync-engine/: Cargo.toml
crates/mihomo-dav-sync/sync-engine/src/: executor.rs  lib.rs
crates/mihomo-platform/: Cargo.toml
crates/mihomo-platform/src/: android.rs  android_bridge.rs  desktop.rs  lib.rs  paths.rs  traits.rs
crates/mihomo-rs/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README_CN.md
crates/mihomo-rs/.github/: SETUP.md
crates/mihomo-rs/.github/workflows/: docs.yml  stale.yml
crates/mihomo-rs/examples/: basic_workflow.rs  close_connections.rs  complete_workflow.rs  concurrent_operations.rs  current_proxy.rs  custom_config.rs  external_controller.rs  first_time_setup.rs  install_by_channel.rs  install_version.rs  list_connections.rs  manage_versions.rs  service_lifecycle.rs  stream_connections.rs  stream_logs.rs  stream_traffic.rs  switch_proxy.rs  test_delay.rs
crates/mihomo-rs/src/: lib.rs  main.rs
crates/mihomo-rs/src/cli/: mod.rs  output.rs
crates/mihomo-rs/src/config/: manager.rs  profile.rs  yaml.rs
crates/mihomo-rs/src/connection/: mod.rs
crates/mihomo-rs/src/core/: port.rs
crates/mihomo-rs/src/proxy/: manager.rs  test.rs
crates/mihomo-rs/src/service/: manager.rs  process.rs
crates/mihomo-rs/src/version/: channel.rs  download.rs
crates/mihomo-rs/tests/: config_manager_test.rs  lib_test.rs  version_manager_test.rs
crates/mihomo-rs/tests/common/: mod.rs
crates/mihomo-version/: Cargo.toml
crates/mihomo-version/src/: channel.rs  download.rs  home.rs  lib.rs  manager.rs
mihomo-rs/: Cargo.toml  README.md
mihomo-rs/.github/: dependabot.yml
mihomo-rs/.github/workflows/: README.md  ci.yml  coverage.yml  release.yml
mihomo-rs/examples/: README.md  auto_restart.rs  custom_home_dir.rs  error_handling.rs  hello_mihomo.rs  list_groups.rs  list_proxies.rs  list_versions.rs  manage_profiles.rs  memory_usage.rs  migration_helper.rs  service_status.rs  stream_logs_filtered.rs
mihomo-rs/src/: main.rs
mihomo-rs/src/cli/: commands.rs
mihomo-rs/src/config/: manager.rs  mod.rs  profile.rs
mihomo-rs/src/connection/: manager.rs
mihomo-rs/src/core/: client.rs  error.rs  home.rs  mod.rs  types.rs
mihomo-rs/src/proxy/: mod.rs
mihomo-rs/src/service/: mod.rs  process.rs
mihomo-rs/src/version/: manager.rs  mod.rs
mihomo-rs/tests/: connection_manager_test.rs  download_test.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: admin_context.rs  app_state.rs  autostart.rs  core_update.rs  factory_reset.rs  frontend.rs  locales.rs  main.rs  paths.rs  platform.rs  runtime.rs  settings.rs  system_proxy.rs  tray.rs  utils.rs
src-tauri/src/tray/: handlers.rs  menu.rs  menu_test.rs  mod.rs
webui/config-manager-ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
webui/config-manager-ui/coverage/: clover.xml  coverage-final.json  (+1 more)
(+130 files in other folders)
