[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/mihomo-rs",
  "crates/despicable-infiltrator-core",
  "crates/mihomo-dav-sync/dav-client",
  "crates/mihomo-dav-sync/sync-engine",
  "crates/mihomo-dav-sync/state-store",
  "crates/mihomo-dav-sync/indexer",
  "crates/mihomo-dav-sync/cli",
  "crates/mihomo-dav-sync/platform-android"
]

[workspace.dependencies]
# Network & Async
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json", "socks"] }
url = "2.5"

# Data Handling
quick-xml = { version = "0.37", features = ["serialize", "async-tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Utility
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
glob = "0.3"
md5 = "0.7"

[patch.crates-io]
mihomo-rs = { path = "crates/mihomo-rs" }
