[package]
name = "mihomo-rs"
version = "1.2.2"
edition = "2021"
authors = ["dingdangmaoup"]
description = "A Rust SDK and CLI tool for mihomo proxy management with service lifecycle management, configuration handling, and real-time monitoring"
license = "MIT"
repository = "https://github.com/DINGDANGMAOUP/mihomo-rs"
homepage = "https://github.com/DINGDANGMAOUP/mihomo-rs"
documentation = "https://docs.rs/mihomo-rs"
readme = "README.md"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust2 = "0.8"
thiserror = "2.0"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
sysinfo = "0.30"
url = "2.5"
crossterm = "0.27"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
toml = "0.9"
flate2 = "1.0"
zip = "7.0"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.24"
mockito = "1.6"

[[bin]]
name = "mihomo-rs"
path = "src/main.rs"

[lib]
name = "mihomo_rs"
path = "src/lib.rs"
