[package]
name = "Mihomo-Despicable-Infiltrator"
version = "0.9.11"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
despicable-infiltrator-core = { path = "../crates/despicable-infiltrator-core" }
log = "0.4"
mihomo-rs = "1.2.1"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-log = "2.0.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "fs", "time", "sync", "net"] }
webbrowser = "1.0"
chrono = "0.4.42"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
