[package]
name = "Mihomo-Despicable-Infiltrator"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
despicable-infiltrator-core = { path = "../crates/despicable-infiltrator-core" }
log = "0.4"
mihomo-rs = "1.2.2"
rfd = "0.17"
serde = { workspace = true }
serde_json = "1.0"
tauri = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0.1"
tauri-plugin-log = "2.0.0"
tokio = { workspace = true }
webbrowser = "1.0"
chrono = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
