[package]
name = "MusicFrog-Despicable-Infiltrator"
version = "0.12.14"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
infiltrator-core = { path = "../crates/infiltrator-core" }
infiltrator-desktop = { path = "../crates/infiltrator-desktop" }
log = "0.4"
mihomo-api = { path = "../crates/mihomo-api" }
mihomo-config = { path = "../crates/mihomo-config" }
mihomo-platform = { path = "../crates/mihomo-platform" }
mihomo-version = { path = "../crates/mihomo-version" }
rfd = "0.17"
serde = { workspace = true }
serde_json = "1.0"
sys-locale = "0.3"
tauri = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0.1"
tauri-plugin-log = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tokio = { workspace = true }
webbrowser = "1.0"
chrono = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
