[package]
name = "despicable-infiltrator-core"
version = "0.1.6"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
axum = "0.7"
brotli = "3.5"
flate2 = "1.0"
log = "0.4"
mihomo-rs = "1.2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["fs", "net", "sync"] }
tower-http = { version = "0.6", features = ["fs"] }
toml = "0.8"
yaml-rust2 = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
