[package]
name = "infiltrator-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
mihomo-api = { path = "../mihomo-api" }
mihomo-platform = { path = "../mihomo-platform" }
