[package]
name = "infiltrator-android"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
mihomo-api = { path = "../mihomo-api" }
mihomo-config = { path = "../mihomo-config" }
mihomo-platform = { path = "../mihomo-platform" }
infiltrator-core = { path = "../infiltrator-core", default-features = false }
reqwest = { workspace = true, default-features = false, features = ["json", "socks", "stream", "http2"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dav-client = { path = "../mihomo-dav-sync/dav-client" }
sync-engine = { path = "../mihomo-dav-sync/sync-engine" }
state-store = { path = "../mihomo-dav-sync/state-store" }
uniffi = { workspace = true, features = ["tokio"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls-no-provider"] }
rustls = { workspace = true }
tun2proxy = "0.5"

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { workspace = true, default-features = false, features = ["native-tls"] }

[build-dependencies]
camino = "1.0.8"
