[package]
name = "infiltrator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
brotli = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
mihomo-config = { path = "../mihomo-config" }
mihomo-platform = { path = "../mihomo-platform" }
mihomo-version = { path = "../mihomo-version" }
reqwest = { workspace = true, features = ["gzip", "brotli", "deflate"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
toml = { workspace = true }
yaml-rust2 = { workspace = true }
dav-client = { path = "../mihomo-dav-sync/dav-client" }
sync-engine = { path = "../mihomo-dav-sync/sync-engine" }
state-store = { path = "../mihomo-dav-sync/state-store" }
