[package]
name = "infiltrator-core"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
brotli = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
mihomo-config = { path = "../mihomo-config" }
mihomo-platform = { path = "../mihomo-platform" }
infiltrator-http = { path = "../infiltrator-http" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
yaml-rust2 = { workspace = true }
