[package]
name = "infiltrator-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
infiltrator-core = { path = "../infiltrator-core" }
log = { workspace = true }
mihomo-api = { path = "../mihomo-api" }
mihomo-config = { path = "../mihomo-config" }
mihomo-platform = { path = "../mihomo-platform" }
mihomo-version = { path = "../mihomo-version" }
reqwest = { workspace = true, default-features = false, features = ["json", "socks", "stream", "http2"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
yaml-rust2 = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { workspace = true, default-features = false, features = ["native-tls"] }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_System_Threading"] }
