[package]
name = "infiltrator-http"
version = "0.1.1"
edition = "2024"

[dependencies]
log = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls", "socks", "stream", "http2", "gzip", "brotli", "deflate", "zstd"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util", "rt-multi-thread"] }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { workspace = true, default-features = false, features = ["rustls-no-provider"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { workspace = true, default-features = false, features = ["native-tls"] }
