[package]
name = "mihomo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
yaml-rust2 = { workspace = true }

[dev-dependencies]
mockito = "1.7"
tokio = { workspace = true }
