[package]
name = "mihomo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "socks", "stream", "http2"] }
log = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
yaml-rust2 = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { workspace = true, default-features = false, features = ["rustls-no-provider"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { workspace = true, default-features = false, features = ["native-tls"] }

[dev-dependencies]
mockito = "1.7"
tokio = { workspace = true }
