[package]
name = "mihomo-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
mihomo-api = { path = "../mihomo-api" }
mihomo-platform = { path = "../mihomo-platform" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
yaml-rust2 = { workspace = true }
