[package]
name = "mihomo-config"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
mihomo-api = { path = "../mihomo-api" }
mihomo-platform = { path = "../mihomo-platform" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
yaml-rust2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
