[package]
name = "mihomo-version"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
mihomo-api = { path = "../mihomo-api" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
zip = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
mockito = "1.7"
tokio = { workspace = true }
