[package]
name = "mihomo-version"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
mihomo-api = { path = "../mihomo-api" }
mihomo-platform = { path = "../mihomo-platform" }
reqwest = { workspace = true, default-features = false, features = ["json", "socks", "stream", "http2"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
zip = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { workspace = true, default-features = false, features = ["rustls-no-provider"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { workspace = true, default-features = false, features = ["native-tls"] }

[dev-dependencies]
mockito = "1.7"
tokio = { workspace = true }
tempfile = "3"
